# AERIS

./: .gitignore  README.md  aeris-console  aeris-studio  package.json  pyproject.toml  tsconfig.base.json
aeris/: cli.py
aeris/ui/: app.py  blueprint.yaml  factory.py  styles.tcss
apps/cli/: package.json
apps/cli/src/: index.ts
docs/: PLAN.md  RESEARCH.md  RISKS_AND_EDGE_CASES.md  THE_CANVAS.md  VISION.md
docs/00_overview/: PROJECT.md
docs/04_plan/: HANDOFF.md  MILESTONES.md  TASKS.md
docs/04_plan/v4_sota_transformation/: logic_canvas.excalidraw  ui_ux_canvas.excalidraw
scripts/: start_debug.sh  validate_basics.sh
