[tool.poetry]
name = "aeris"
version = "0.1.0"
description = "The Agentic Workspace Engine — Integrating Antigravity, Cursor, and Windsurf concepts into a high-end TUI."
authors = ["Jannis <your.email@example.com>"]
readme = "README.md"
packages = [{include = "aeris"}]

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.85.0"
rich = "^13.7.0"
google-generativeai = "^0.8.0"
python-dotenv = "^1.0.1"
pydantic = "^2.6.0"
httpx = "^0.27.0"

[tool.poetry.scripts]
aeris = "aeris.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
